<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_dom"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_documentation"
                android:icon="@drawable/ic_content_document"
                android:title = "@string/menu_documentation"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings"/>
    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                    android:id="@+id/add_watch_WorkProjectors"
                    android:title="@string/add_watch_WorkProjectors"/>
        </menu>
    </item>

</menu>